--- a/src/content/front/index.mdx
+++ b/src/content/front/index.mdx
@@ -7,18 +7,14 @@ import Grid from '../../components/directory/Grid.astro'
 import SimpleLeftHero from '../../components/hero/SimpleLeftHero.astro'
 import Search from '../../components/directory/Search.astro'
 
-<SimpleLeftHero image="meditation.jpg">
-  <span slot="heading">This is your brand new directory ! 👋</span>
-  <span slot="description">See the [📚 **documentation**](https://minteddirectory.com/docs) to see how to customize your landing page.</span>
+<SimpleLeftHero>
+  <span slot="heading">2024 Must Haves</span>
+  <span slot="description">Check [**Instagram**](https://www.instagram.com/big_hamzzzreviews/) for the latest reviews.</span>
 </SimpleLeftHero>
 
-Get inspired by other directories:
-+ 📗 [Nuxtjs Starters](https://nuxtstarters.com)
-+ 🏠 [FortyTwoTools](https://fortytwotools.com)
 
 ---
 
-Here is your starting listings grid 👇
 
 <Search />
 
