--- a/src/content/front/index.mdx
+++ b/src/content/front/index.mdx
@@ -7,7 +7,7 @@ import Grid from '../../components/directory/Grid.astro'
 import SimpleLeftHero from '../../components/hero/SimpleLeftHero.astro'
 import Search from '../../components/directory/Search.astro'
 
-<SimpleLeftHero>
+<SimpleLeftHero image="meditation.jpg">
   <span slot="heading">2024 Must Haves</span>
   <span slot="description">Check [**Instagram**](https://www.instagram.com/big_hamzzzreviews/) for the latest reviews.</span>
 </SimpleLeftHero>
